<resources>
    <string name="app_name">WorldWeather</string>
    <string name="current_cloudiness">current cloudiness</string>
    <string name="humidity">humidity</string>
    <string name="pressure">pressure</string>
    <string name="wind">wind</string>
    <string name="sunrise_and_sunset_time">sunrise and sunset time</string>
    <string name="empty_string"> </string>
    <string name="hourly_forecast">Почасовой прогноз</string>
    <string name="weather_type_icon">weather type icon</string>
    <string name="weekly_overcast_title">Прогноз на неделю</string>
    <string name="day">День</string>
    <string name="night">Ночь</string>
    <string name="degree">%1$s°</string>
    <string name="meter_in_seconds">%1$s м/с</string>
    <string name="percent">%1$s %%</string>
    <string name="millimeters_pressure"> %1$s мм.рт.ст.</string>
    <string name="feels_temp">По ощущениям: %1$s°</string>
    <string name="update_time">Обновлено в %1$s</string>
    <string name="back_button">back button</string>
    <string name="morning">Утро</string>
    <string name="evening">Вечер</string>
    <string name="apparent_as">По ощущениям</string>
    <string name="wind_icon">wind icon</string>
    <string name="wind_title">Ветер, м/c</string>
    <string name="humidity_daily">Влажность, %</string>
    <string name="pressure_daily">Давление, мм.рт.ст.</string>
    <string name="millimeters">мм.рт.ст.</string>
    <string name="temperature_daily">Температура</string>
    <string name="forecast_date">Прогноз на %1$s</string>
    <string name="select_day_warning">Выберите день из списка для отображения детального прогноза</string>
</resources>