<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hour_item_card"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginBottom="6dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxLines="1"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ic_weather_type_hourly"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="22.11" />

        <ImageView
            android:id="@+id/ic_weather_type_hourly"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/weather_type_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/day_temperature"
            app:layout_constraintStart_toEndOf="@+id/date"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_snowy" />

        <TextView
            android:id="@+id/day_temperature_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/day"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/day_temperature"
            app:layout_constraintEnd_toStartOf="@id/night_temperature"
            app:layout_constraintStart_toEndOf="@id/ic_weather_type_hourly"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/day_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/night_temperature"
            app:layout_constraintStart_toEndOf="@id/ic_weather_type_hourly"
            app:layout_constraintTop_toBottomOf="@id/day_temperature_title"
            tools:text="28°" />

        <TextView
            android:id="@+id/night_temperature_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/night"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/night_temperature"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/day_temperature_title"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/night_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/day_temperature"
            app:layout_constraintTop_toBottomOf="@id/night_temperature_title"
            tools:text="28°" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>